--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
 <!DOCTYPE html>
 <html>
 <style>
-body, html {
-    height: 100%;
-    margin: 0;
-}
-
-.bgimg {
-    background-image: url('/w3images/forestbridge.jpg');
-    height: 100%;
-    background-position: center;
-    background-size: cover;
+body, html {round-size: cover;
     position: relative;
     color: white;
     font-family: "Courier New", Courier, monospace;
